# MedicalSimulator

./: CMakeLists.txt  main.cpp
include/: callback_setter.h  camera.h  display.h  filesystem.h  mesh.h
libs/: CMakeLists.txt
src/: camera.cpp
